added the forms and action for staff and customer

--- a/parking_management/users/templates/customer/register_customer.html
+++ b/parking_management/users/templates/customer/register_customer.html
@@ -1,5 +1,5 @@
 <h1>Register as Customer</h1>
-<form method='post' action=''>
+<form method='post' action="{% url 'register_customer' %}">
     {% csrf_token %}
     {{form.as_p}}
     <button type='submit'>Register</button>
