--- a/parking_management/users/templates/staff/register_staff.html
+++ b/parking_management/users/templates/staff/register_staff.html
@@ -1,5 +1,5 @@
 <h1>Register Staff</h1>
-<form method='post'>
+<form method='post' action="{% url 'register_staff' %}">
     {% csrf_token %}
     {{form.as_p}}
     <button type='submit'>Register</button>
